[gd_scene load_steps=6 format=4 uid="uid://bkdufgwo17yqd"]

[ext_resource type="Script" uid="uid://14sbngud27p0" path="res://Scripts/Furniture.gd" id="1_chxxl"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7th5u"]
resource_name = "mat0"
cull_mode = 2
vertex_color_use_as_albedo = true
metallic = 0.62019235
roughness = 0.53485876

[sub_resource type="ArrayMesh" id="ArrayMesh_8qewk"]
_surfaces = [{
"aabb": AABB(-0.5199387, 0.0017207861, -0.14321536, 1.037602, 1.6542789, 0.29406792),
"format": 34359742465,
"index_count": 294,
"index_data": PackedByteArray("AAABAAIAAwABAAAAAgAEAAAABQADAAAABgAEAAIAAwAFAAYABwAGAAIABgAHAAMACAAJAAoACwAKAAkADAAIAAoACQANAAsADQAJAAgADgAIAAwACAAOAA0ADwAMAAoACgALAA8ADAAPAA4ADwALAA0ADgAPAA0AEAARABIAEAATABEAFAATABAAEwAVABEAFQATABQAEQAVABIAFgAUABAAEAASABYAFQAUABcAFQAXABIAEgAXABgAFgASABkAGAAaABIAGgAZABIAGgAYABsAGwAZABoAGAAcABsAGwAdABkAGwAcAB0AHgAcABgAHAAeAB0AHQAeABkAHwAeABgAHgAfABkAIAAhACIAIgAjACAAIQAgACQAJAAgACMAIgAhACUAIwAiACUAJAAmACEAIQAmACUAJwAkACMAJgAkACcAJQAnACMAJwAlACYAKAApACoAKwAqACkAKgAsACgAKQAtACsALQApACgAKgArAC4ALgArAC0ALgAsACoAKAAvAC0ALQAvAC4ALwAoACwALAAuAC8AMAAxADIAMAAzADEAMwA0ADEAMAAyADUAMgA2ADUANgA3ADUAOAA5ADoAOwA4ADoAOwA8ADgAOAA9ADkAPAA9ADgAPQA+ADkAPQA8AD4AOQA+ADoAPAA/AD4APgA/ADoAQABBAEIAQQBDAEIARABAAEIARABFAEAARABCAEUARQBGAEAAQwBGAEUAQgBHAEUARwBDAEUAQwBHAEIASABJAEoASgBLAEgASgBJAEwATABNAEoA"),
"name": "mat0",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 78,
"vertex_data": PackedByteArray("FB0Av34p0z9AhOg9FB0Av/A7qT1AhOg9FB0Av/A7qT0Iwwa+6w//PvA7qT1AhOg9FB0Av34p0z8Iwwa+6w//Pn4p0z9AhOg96w//Pn4p0z8Iwwa+6w//PvA7qT0Iwwa+tBoFv8z30z8MpxK+lIUEP8z30z8MpxK+lIUEP8z30z8gSRo+lIUEP4aezj8gSRo+tBoFv8z30z8gSRo+lIUEP4aezj8MpxK+tBoFv4aezj8MpxK+tBoFv4aezj8gSRo+0172PgCM4ToYQw++DEsBPwCM4ToYQw++DEsBPyjPzj8YQw++0172PgCM4TrgTdy90172PrzByT/gTdy9DEsBPwCM4TrgTdy90172PrzByT8YQw++DEsBPyjPzj/gTdy9COABvzDPzj/gTdy9sIj3vrzByT8YQw++COABvzDPzj8YQw++COABvwCM4ToYQw++COABvwCM4TrgTdy9sIj3vgCM4ToYQw++sIj3vgCM4TrgTdy9sIj3vrzByT/gTdy9zGIDPwhapD3wHxG+zGIDP/xD/T3wHxG+7PcDv/xD/T3wHxG+7PcDvwhapD3wHxG+zGIDPwhapD0YeRo+7PcDv/xD/T0YeRo+zGIDP/xD/T0YeRo+7PcDvwhapD0YeRo+krEBv6D0WD/gxfI9krEBv6D0WD/4Kg++lBwBP6D0WD/4Kg++lBwBP04nUD/4Kg++lBwBP6D0WD/gxfI9krEBv04nUD/4Kg++lBwBP04nUD/gxfI9krEBv04nUD/gxfI94B26PPhZKj4YQw++4B26PLzByT8YQw++ELnMvLzByT8YQw++4B26PPhZKj7gTdy94B26PLzByT/gTdy9kMHMvPhZKj4YQw++ELnMvLzByT/gTdy9kMHMvPhZKj7gTdy90172PgCM4TowkNA9DEsBPwCM4TowkNA9DEsBP+Lazj8wkNA90172PuLazj8wkNA90172PuLazj8AZAk+0172PgCM4ToAZAk+DEsBPwCM4ToAZAk+DEsBP+Lazj8AZAk+sIj3vuLazj8wkNA9COABv+Lazj8wkNA9COABvwCM4TowkNA9COABv+Lazj8AZAk+sIj3vgCM4TowkNA9sIj3vgCM4ToAZAk+sIj3vuLazj8AZAk+COABvwCM4ToAZAk+HJv7vvhZKj7IP9i9HJv7vvhZKj4YPQ2+Y3H6PvhZKj4YPQ2+Y3H6PvhZKj7IP9i9HJv7vlruAT4YPQ2+Y3H6PlruAT4YPQ2+")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_3fm11"]
resource_name = "closet_New_Game_Object_mat0_0_035"
_surfaces = [{
"aabb": AABB(-0.5199387, 0.0017207861, -0.14321536, 1.037602, 1.6542789, 0.29406792),
"attribute_data": PackedByteArray("4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA7e3t/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA4ODg/wAAAAAAAAAA"),
"format": 34359742495,
"index_count": 294,
"index_data": PackedByteArray("AAABAAIAAgADAAAABAAFAAYABgAHAAQACAAJAAoACwAIAAoADAANAA4ADwAMAA4AEAARABIAEgATABAAFAAVABYAFgAXABQAGAAZABoAGgAbABgAHAAdAB4AHAAeAB8AHwAeACAAIQAgAB4AIgAgACEAIgAjACAAJAAlACYAJgAnACQAKAApACoAKwAoACoALAAtAC4ALwAsAC4AMAAxADIAMwAwADIANAA1ADYANwA0ADYAOAA5ADoAOgA7ADgAPAA9AD4APgA/ADwAQABBAEIAQgBDAEAARABFAEYARwBEAEYASABJAEoASgBLAEgATABNAE4ATgBPAEwAUABRAFIAUgBTAFAAVABVAFYAVgBXAFQAWABZAFoAWABaAFsAXABdAF4AXwBcAF4AYABhAGIAYwBgAGIAZABlAGYAZwBkAGYAaABpAGoAawBoAGoAbABtAG4AbwBsAG4AcABxAHIAcwBwAHIAdAB1AHYAdwB0AHYAeAB5AHoAewB4AHoAfAB9AH4AfgB/AHwAgACBAIIAggCDAIAAhACFAIYAhgCHAIQAiACJAIoAiwCIAIoAjACNAI4AjwCMAI4AkACRAJIAkgCTAJAAlACVAJYAlwCUAJYAmACZAJoAmwCYAJoAnACdAJ4AngCfAJwAoAChAKIAogCjAKAApAClAKYApwCkAKYAqACpAKoAqwCoAKoArACtAK4ArwCsAK4AsACxALIAsACyALMAtAC1ALYAtwC0ALYAuAC5ALoAuwC4ALoAvAC9AL4AvwC8AL4A"),
"material": SubResource("StandardMaterial3D_7th5u"),
"name": "mat0",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 192,
"vertex_data": PackedByteArray("FB0Av34p0z9AhOg9FB0Av/A7qT1AhOg9FB0Av/A7qT0Iwwa+FB0Av34p0z8Iwwa+6w//Pn4p0z8Iwwa+6w//PvA7qT0Iwwa+6w//PvA7qT1AhOg96w//Pn4p0z9AhOg96w//Pn4p0z8Iwwa+FB0Av34p0z8Iwwa+FB0Av/A7qT0Iwwa+6w//PvA7qT0Iwwa+tBoFv8z30z8MpxK+lIUEP8z30z8MpxK+lIUEP8z30z8gSRo+tBoFv8z30z8gSRo+lIUEP4aezj8gSRo+lIUEP8z30z8gSRo+lIUEP8z30z8MpxK+lIUEP4aezj8MpxK+tBoFv4aezj8MpxK+tBoFv8z30z8MpxK+tBoFv8z30z8gSRo+tBoFv4aezj8gSRo+lIUEP4aezj8MpxK+lIUEP8z30z8MpxK+tBoFv8z30z8MpxK+tBoFv4aezj8MpxK+0172PgCM4ToYQw++DEsBPwCM4ToYQw++DEsBPyjPzj8YQw++0172PrzByT8YQw++sIj3vrzByT8YQw++COABvzDPzj8YQw++COABvwCM4ToYQw++sIj3vgCM4ToYQw++DEsBPyjPzj8YQw++DEsBPyjPzj/gTdy9COABvzDPzj/gTdy9COABvzDPzj8YQw++DEsBPwCM4TrgTdy9DEsBPyjPzj/gTdy9DEsBPyjPzj8YQw++DEsBPwCM4ToYQw++sIj3vgCM4TrgTdy9sIj3vrzByT/gTdy9sIj3vrzByT8YQw++sIj3vgCM4ToYQw++COABvzDPzj/gTdy9COABvwCM4TrgTdy9COABvwCM4ToYQw++COABvzDPzj8YQw++0172PrzByT/gTdy90172PgCM4TrgTdy90172PgCM4ToYQw++0172PrzByT8YQw++zGIDPwhapD3wHxG+zGIDP/xD/T3wHxG+7PcDv/xD/T3wHxG+7PcDvwhapD3wHxG+7PcDvwhapD3wHxG+7PcDv/xD/T3wHxG+7PcDv/xD/T0YeRo+7PcDvwhapD0YeRo+zGIDP/xD/T3wHxG+zGIDPwhapD3wHxG+zGIDPwhapD0YeRo+zGIDP/xD/T0YeRo+zGIDP/xD/T3wHxG+zGIDP/xD/T0YeRo+7PcDv/xD/T0YeRo+7PcDv/xD/T3wHxG+krEBv6D0WD/gxfI9krEBv6D0WD/4Kg++lBwBP6D0WD/4Kg++lBwBP6D0WD/gxfI9lBwBP04nUD/gxfI9lBwBP6D0WD/gxfI9lBwBP6D0WD/4Kg++lBwBP04nUD/4Kg++krEBv04nUD/4Kg++krEBv6D0WD/4Kg++krEBv6D0WD/gxfI9krEBv04nUD/gxfI9lBwBP04nUD/4Kg++lBwBP6D0WD/4Kg++krEBv6D0WD/4Kg++krEBv04nUD/4Kg++4B26PPhZKj4YQw++4B26PLzByT8YQw++ELnMvLzByT8YQw++kMHMvPhZKj4YQw++4B26PPhZKj7gTdy94B26PLzByT/gTdy94B26PLzByT8YQw++4B26PPhZKj4YQw++ELnMvLzByT/gTdy9kMHMvPhZKj7gTdy9kMHMvPhZKj4YQw++ELnMvLzByT8YQw++0172PgCM4TowkNA9DEsBPwCM4TowkNA9DEsBP+Lazj8wkNA90172PuLazj8wkNA9sIj3vuLazj8wkNA9COABv+Lazj8wkNA9COABvwCM4TowkNA9sIj3vgCM4TowkNA9DEsBPwCM4ToAZAk+DEsBP+Lazj8AZAk+DEsBP+Lazj8wkNA9DEsBPwCM4TowkNA9sIj3vgCM4ToAZAk+sIj3vuLazj8AZAk+sIj3vuLazj8wkNA9sIj3vgCM4TowkNA9COABv+Lazj8AZAk+COABvwCM4ToAZAk+COABvwCM4TowkNA9COABv+Lazj8wkNA90172PuLazj8AZAk+0172PgCM4ToAZAk+0172PgCM4TowkNA90172PuLazj8wkNA9HJv7vvhZKj7IP9i9HJv7vvhZKj4YPQ2+Y3H6PvhZKj4YPQ2+Y3H6PvhZKj7IP9i9Y3H6PvhZKj4YPQ2+HJv7vvhZKj4YPQ2+HJv7vlruAT4YPQ2+Y3H6PlruAT4YPQ2+lIUEP8z30z8gSRo+lIUEP4aezj8gSRo+tBoFv4aezj8gSRo+tBoFv8z30z8gSRo+COABv+Lazj8AZAk+sIj3vuLazj8AZAk+sIj3vgCM4ToAZAk+COABvwCM4ToAZAk+0172PuLazj8AZAk+DEsBP+Lazj8AZAk+DEsBPwCM4ToAZAk+0172PgCM4ToAZAk+7PcDvwhapD0YeRo+7PcDv/xD/T0YeRo+zGIDP/xD/T0YeRo+zGIDPwhapD0YeRo+6w//PvA7qT1AhOg9FB0Av/A7qT1AhOg9FB0Av34p0z9AhOg96w//Pn4p0z9AhOg9tBoFv4aezj8gSRo+lIUEP4aezj8gSRo+lIUEP4aezj8MpxK+tBoFv4aezj8MpxK+lBwBP6D0WD/gxfI9lBwBP04nUD/gxfI9krEBv04nUD/gxfI9krEBv6D0WD/gxfI9krEBv04nUD/4Kg++krEBv04nUD/gxfI9lBwBP04nUD/gxfI9lBwBP04nUD/4Kg++sIj3vgCM4TrgTdy9COABvwCM4TrgTdy9COABvzDPzj/gTdy9sIj3vrzByT/gTdy9COABvwCM4TrgTdy9sIj3vgCM4TrgTdy9sIj3vgCM4ToYQw++COABvwCM4ToYQw++COABvwCM4TowkNA9COABvwCM4ToAZAk+sIj3vgCM4ToAZAk+sIj3vgCM4TowkNA9DEsBPwCM4TrgTdy90172PgCM4TrgTdy90172PrzByT/gTdy9DEsBPyjPzj/gTdy90172PgCM4TrgTdy9DEsBPwCM4TrgTdy9DEsBPwCM4ToYQw++0172PgCM4ToYQw++0172PgCM4ToAZAk+DEsBPwCM4ToAZAk+DEsBPwCM4TowkNA90172PgCM4TowkNA9zGIDPwhapD0YeRo+zGIDPwhapD3wHxG+7PcDvwhapD3wHxG+7PcDvwhapD0YeRo+AAD/f////78AAP9/////vwAA/3////+/AAD/f////7////9/////v////3////+/////f////7////9/////v/////////+//////////7//////////v/////////+//3///////7//f///////v/9///////+//3///////7////9/////v////3////+/////f////7////9/////vwAA/3////+/AAD/f////78AAP9/////vwAA/3////+//////////7//////////v/////////+//////////7//////////v/////////+//////////7//////////v/////////+//////////7//////////v/////////+//3///////7//f///////v/9///////+//3///////7////9/////v////3////+/////f////7////9/////v////3////+/////f////7////9/////v////3////+/AAD/f////78AAP9/////vwAA/3////+/AAD/f////78AAP9/////vwAA/3////+/AAD/f////78AAP9/////v/////////+//////////7//////////v/////////+/AAD/f////78AAP9/////vwAA/3////+/AAD/f////7////9/////v////3////+/////f////7////9/////v/9///////+//3///////7//f///////v/9///////+//3///////7//f///////v/9///////+//3///////7////9/////v////3////+/////f////7////9/////vwAA/3////+/AAD/f////78AAP9/////vwAA/3////+//////////7//////////v/////////+//////////7//////////v/////////+//////////7//////////v////3////+/////f////7////9/////v////3////+/AAD/f////78AAP9/////vwAA/3////+/AAD/f////7//////////v/////////+//////////7//////////v/////////+//////////7//////////v/////////+/////f////7////9/////v////3////+/////f////7////9/////v////3////+/////f////7////9/////vwAA/3////+/AAD/f////78AAP9/////vwAA/3////+/AAD/f////78AAP9/////vwAA/3////+/AAD/f////7//f///////v/9///////+//3///////7//f///////v/////////+//////////7//////////v/////////+//3//f////z//f/9/////P/9//3////8//3//f////z//f/9/////P/9//3////8//3//f////z//f/9/////P/9//3////8//3//f////z//f/9/////P/9//3////8//3//f////z//f/9/////P/9//3////8//3//f////z//f/9/////P/9//3////8//3//f////z//f/9/////P/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+//3//f////z//f/9/////P/9//3////8//3//f////z//fwAA////v/9/AAD///+//38AAP///7//fwAA////v/9//3////8//3//f////z//f/9/////P/9//3////8//38AAP///7//fwAA////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+//38AAP///7//fwAA////v/9//3////8//3//f////z//f/9/////P/9//3////8//38AAP///7//fwAA////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_8qewk")

[sub_resource type="BoxShape3D" id="BoxShape3D_01h48"]
size = Vector3(1.0920258, 1.6062927, 0.4499817)

[node name="Closet" type="Node3D"]
script = ExtResource("1_chxxl")
initial_stock = 0
restock_count = 3

[node name="Mesh" type="MeshInstance3D" parent="."]
transform = Transform3D(-1.9998765, 0, 0.02222141, 0, 2, 0, -0.02222141, 0, -1.9998765, 0, 0, 0)
mesh = SubResource("ArrayMesh_3fm11")
skeleton = NodePath("")

[node name="Area3D" type="Area3D" parent="Mesh"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Mesh/Area3D"]
transform = Transform3D(1.0000473, 0, -2.5331974e-07, 0, 1, 0, 2.5331974e-07, 0, 1.0000473, 0.011070653, 0.89515686, 0.031906616)
shape = SubResource("BoxShape3D_01h48")

[node name="ray1" type="RayCast3D" parent="Mesh"]
transform = Transform3D(1.0000004, 0, -1.8626451e-09, 0, 1, 0, 1.8626451e-09, 0, 1.0000004, -0.50511575, 0.07373334, 0.14363477)
target_position = Vector3(0, -0.092, 0)

[node name="ray2" type="RayCast3D" parent="Mesh"]
transform = Transform3D(1.0000005, 0, -1.8626451e-09, 0, 1, 0, 1.8626451e-09, 0, 1.0000005, 0.5018145, 0.07373334, 0.13244632)
target_position = Vector3(0, -0.092, 0)

[node name="ray3" type="RayCast3D" parent="Mesh"]
transform = Transform3D(1.0000006, 0, -2.7939677e-09, 0, 1, 0, 2.7939677e-09, 0, 1.0000006, 0.5012713, 0.07373334, -0.14792812)
target_position = Vector3(0, -0.092, 0)

[node name="ray4" type="RayCast3D" parent="Mesh"]
transform = Transform3D(1.0000005, 0, -1.8626451e-09, 0, 1, 0, 1.8626451e-09, 0, 1.0000005, -0.50824517, 0.07373334, -0.13799706)
target_position = Vector3(0, -0.092, 0)
